# FastAPI-template

./: .env.example  .env.local  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
src/: main.py
src/entitys/: __init__.py  base.py  session.py  user.py
src/entitys/enums/: auth_provider.py
src/helpers/: errors.py  load_env.py
src/infra/: alembic.ini  database.py
src/infra/migrations/: env.py
src/infra/migrations/versions/: 369f135ad448_add_inactive_field_into_user.py  8d6fdfb99ba6_add_google_info_into_user.py  d084e91baef1_migration_v1.py
src/infra/security/: google_oauth.py  jwt.py  password.py
src/middlewares/: authentication.py
src/models/: health.py  session.py  token.py  user.py
src/repositorys/: generic.py  health.py  sessions.py  user.py
src/routes/: google.py  health.py  sessions.py  users.py
src/service/: health.py  session.py  user.py
tests/: conftest.py
tests/integration/api/v1/health/: test_get.py
tests/integration/api/v1/sessions/: test_sessions_delete.py  test_sessions_post.py
tests/integration/api/v1/user/: test_post.py
tests/integration/api/v1/users/: test_users_post.py
tests/integration/api/v1/users/me/: test_users_me_delete.py  test_users_me_post.py
tests/unit/secutiry/: test_password.py
