[tool.poetry]
name = "trading-algo-api"
version = "0.1.0"
description = ""
authors = ["Enrico Marquez <enricovmarquezz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic = "^2.11.9"
alembic = "^1.16.5"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]
