[tool.poetry]
name = "trading-algo-api"
version = "0.1.0"
description = ""
authors = ["Enrico Marquez <enricovmarquezz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic = {extras = ["email"], version = "^2.11.9"}
asyncpg = "^0.30.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
httpx = ">=0.23.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
authlib = "^1.6.5"
itsdangerous = "^2.2.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "types-authlib (>=1.6.5.20251005,<2.0.0.0)",
    "commitizen (>=4.9.1,<5.0.0)"
]
